--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     </p>
     <h2>Existence</h2>
     <p>
-        First evolving around 300 million years ago,<br>
-         the group spead across the northern hemisphere with fossils found in both Europe and North America.<br>
-        These creatures would remain domiant for 70 milion years<br>
-         before eventualy being out competed completly by the pterasaurs in the late Triassic.
+        First evolving around 300 million years ago, the group spead across the northern hemisphere with fossils found in both Europe and North America.<br>
+        These creatures would remain domiant for 70 milion years before eventualy being out competed completly by the pterasaurs in the late Triassic.
         
     </p>
     <h2>Distinction</h2>
