--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <h1>Griffenflies</h1>
+    <h1>Griffinflies</h1>
     <a> 
-        <img src="img/Griffenfly.jpg" alt="Griffenflys">
+        <img src="img/Griffinfly.jpg" alt="Griffinflys">
         <p>
-            Meganeura, one of the largest Griffenflies common throught the Carboniferous and Permian.<br>
+            Meganeura, one of the largest Griffinflies common throught the Carboniferous and Permian.<br>
         </p>
     </a>
     <h2>Traits</h2>
@@ -25,11 +25,10 @@
     <p>
         First evolving around 300 million years ago, the group spead across the northern hemisphere with fossils found in both Europe and North America.<br>
         These creatures would remain domiant for 70 milion years before eventualy being out competed completly by the pterasaurs in the late Triassic.
-        
     </p>
     <h2>Distinction</h2>
     <p>
-        While highly resembling dragonflies, griffenflies are not all that related to other similar looking insects.<br>
+        While highly resembling dragonflies, griffinflies are not all that related to other similar looking insects.<br>
         The main difference between them and dragonflies besides size is a changed wing venation system.
     </p>
 </body>
