--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         These large areal preditores have advanced compound eyes designed to scan for potential victims.<br>
         They also have long grasping arms for grabing small animals and exoskelital teeth for disecting them quickly.<br>
         This all rolled into a body that can have a wingspan of 28 inches accross or over 2 feet.<br>
-        Said wings would have likely not been as powerful as modern flying insects as their key wing mussel (The Pterostigma) wernt very good,<br>
+        Said wings would have likely not been as powerful as modern flying insects as their key wing mussel (The Pterostigma) wasn't very good,<br>
         still able to fly fowards rapidly and turn on a dime. Their main danger would be posed by the fact that they were the only flying animals at the time.
     </p>
     <h2>Existence</h2>
